Avoid text overflow
Added CSS properties to tweet container and text to stop long tweets text overflowing the container area.

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -1,4 +1,6 @@
 .tweet {
+  display: flex;
+  flex-flow: column wrap;
   border: 5px solid #545149;
   padding: 1em 0.5em 1em 0.5em;
   margin-bottom: 1em;
@@ -34,6 +36,8 @@ article.tweet img {
 
 .text {
  padding: 0 0.5em 0 0.5em;
+ word-wrap: break-word;
+ width: 35em;
 }
 
 article.tweet footer {
